# social-media-dashboard-api

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
ename/: pyvenv.cfg
ename/Scripts/: activate  activate.bat
follow/: models.py  urls.py  views.py
follow/migrations/: 0001_initial.py
follow/tests/: test_models.py  test_views.py
like/: models.py  serializers.py  urls.py  views.py
like/migrations/: 0001_initial.py  0002_comment.py
like/test/: test_models.py  test_views.py
post/: models.py  serializers.py  urls.py  views.py
post/migrations/: 0001_initial.py
post/test/: test_models.py  test_views.py
socialmedia/: settings.py  swagger.py  urls.py
user/: models.py  searchview.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py
user/test/: test_models.py  test_views.py
