[tool.poetry]
name = "social-media-dashboard 4"
version = "0.1.0"
description = ""
authors = ["darainbrainerhub <darains.brainerhub@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "5.0.6"
asgiref = "3.8.1"
djangorestframework = "3.15.1"
djangorestframework-simplejwt = "5.3.1"
drf-yasg = "1.21.7"
inflection = "0.5.1"
packaging = "24.0"
psycopg2 = "2.9.9"
pyjwt = "2.8.0"
pytz = "2024.1"
pyyaml = "6.0.1"
setuptools = "70.0.0"
sqlparse = "0.5.0"
tzdata = "2024.1"
uritemplate = "4.1.1"
gunicorn = "20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
